Change Icons Release and Debug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,15 @@ android {
         buildConfigField "String", "FLICKR_KEY", "\"2e5c23da39c1157ef7c00a6c3805b757\""
     }
     buildTypes {
+        debug {
+            applicationIdSuffix '.debug'
+            debuggable true
+            shrinkResources false
+        }
+
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
