--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'ae.propertyfinder.android-analytics:analytics:1.23.0'
 
     implementation "com.squareup.moshi:moshi:1.9.2"
 
