Squashed commit of the following:
commit ea1330324b710fb5bb58cf92c5fdc165fcb2190c
Author: irvin <soulrainx@hotmail.com>
Date:   Sat Mar 21 23:27:59 2020 +0400

    Updated gradle

commit e4621249c3266a3ed8aebf3e84f32c8b0dc22f3d
Author: irvin <soulrainx@hotmail.com>
Date:   Sat Mar 21 23:05:35 2020 +0400

    Updated gradle

commit 011fb070701303aa1e606a6ef2ac9c52157c3ae6
Author: irvin <soulrainx@hotmail.com>
Date:   Sat Mar 21 22:57:46 2020 +0400

    Updated gradle

commit 524f9678b1b347742f1d7d25b8052ffc8c80427e
Author: irvin <soulrainx@hotmail.com>
Date:   Sat Mar 21 22:53:11 2020 +0400

    Updated gradle

commit f0f495d4f20af07ffdd087778abd9e76a017c7d0
Author: irvin <soulrainx@hotmail.com>
Date:   Sat Mar 21 22:38:02 2020 +0400

    Test if Builds with Github packages dependency

commit ef2811f9ae072b937c1a2b25da4ee36a96bb27ab
Author: irvin <soulrainx@hotmail.com>
Date:   Sat Mar 21 22:19:53 2020 +0400

    Remove secrets

commit 6e23b2b87aeaedec26b9a1d9d423ca664df0a9a3
Author: irvin <soulrainx@hotmail.com>
Date:   Sat Mar 21 22:10:56 2020 +0400

    more powerfull  token

commit dafa2c04c47bb0b15c6f19ae0af0edc6e8419fb4
Author: irvin <soulrainx@hotmail.com>
Date:   Sat Mar 21 21:58:49 2020 +0400

    Test if Builds with Github packages dependency

commit a28fa6c182ac541b54ff0f0b4e9ed2906f1dcf91
Author: irvin <soulrainx@hotmail.com>
Date:   Sat Mar 21 17:53:57 2020 +0400

    Fix commit test

commit 6d7499c4628c8bf8ef5d6906e7205d0ac1faab09
Author: irvin <soulrainx@hotmail.com>
Date:   Sat Mar 21 16:47:54 2020 +0400

    Forcing Fail of Test to stop build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('/Users/irvingonzalez/Documents/challenge-release-key')
+            storePassword 'storesecret22'
+            keyAlias = 'challenge-key'
+            keyPassword 'keysecret22'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "jp.styler.challenge"
@@ -23,8 +31,10 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
